# Penguin-Engine

./: CMakeLists.txt  README.md
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  penguin
include/glad/: glad.h
src/: glad.c  program.cpp
src/Graphics/Camera/: camera.h
src/Graphics/Renderer/: IBO.cpp  IBO.h  VAO.cpp  VAO.h  VBL.cpp  VBL.h  VBO.cpp  VBO.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  vertex.h
src/Graphics/shaders/: shader.cpp  shader.h
src/shader/: base_fs.glsl  base_vs.glsl
src/window/: window.cpp  window.h
